# PyDbLite

./: .gitignore  README.rst  pyproject.toml
pydblite/: pydblite.py
tests/: __init__.py
